@@ -6,6 +6,10 @@
    *    (ms) Meir Guttman reported a use case for logging messages
              with dynamic levels on log4perl-devel@lists.sourceforge.net.
              Added to manual page.
+   *    (ms) Implemented suggestion by Neil Hooey to check for and report
+             undefined message elements before they're assembled in Appender.pm
+             and a warning is issued without a proper code location:
+             https://github.com/mschilli/log4perl/issues/15
 
 1.37 (2012/05/30)
    *    (ms) [rt.cpan.org #75655] Meir Guttman found the module to make
